@@ -8,6 +8,7 @@ Version 1.1.1 to be released
 - Bug #839: typo in CFormatter about calling method_exists() (Qiang)
 - Bug #865: CWidgetFactory didn't set the owner of the newly created widgets correctly (Qiang)
 - Bug: Setting the 'with' option in criteria array doesn't trigger eager loading for AR (Qiang)
+- Bug: CActiveRecord should update oldPrimaryKey after calling save() (Qiang)
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
 - Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
